src/main/java/org/oagi/srt/grammar/xpath/XPathParser.java
// Generated from XPath.g4 by ANTLR 4.7.2

package org.oagi.srt.grammar.xpath;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XPathParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, NodeType = 9,
            Number = 10, AxisName = 11, PATHSEP = 12, ABRPATH = 13, LPAR = 14, RPAR = 15, LBRAC = 16,
            RBRAC = 17, MINUS = 18, PLUS = 19, DOT = 20, MUL = 21, DOTDOT = 22, AT = 23, COMMA = 24,
            PIPE = 25, LESS = 26, MORE_ = 27, LE = 28, GE = 29, COLON = 30, CC = 31, APOS = 32, QUOT = 33,
            Literal = 34, Whitespace = 35, NCName = 36;
    public static final int
            RULE_main = 0, RULE_locationPath = 1, RULE_absoluteLocationPathNoroot = 2,
            RULE_relativeLocationPath = 3, RULE_step = 4, RULE_axisSpecifier = 5,
            RULE_nodeTest = 6, RULE_predicate = 7, RULE_abbreviatedStep = 8, RULE_expr = 9,
            RULE_primaryExpr = 10, RULE_functionCall = 11, RULE_unionExprNoRoot = 12,
            RULE_pathExprNoRoot = 13, RULE_filterExpr = 14, RULE_orExpr = 15, RULE_andExpr = 16,
            RULE_equalityExpr = 17, RULE_relationalExpr = 18, RULE_additiveExpr = 19,
            RULE_multiplicativeExpr = 20, RULE_unaryExprNoRoot = 21, RULE_qName = 22,
            RULE_functionName = 23, RULE_variableReference = 24, RULE_nameTest = 25,
            RULE_nCName = 26;

    private static String[] makeRuleNames() {
        return new String[]{
                "main", "locationPath", "absoluteLocationPathNoroot", "relativeLocationPath",
                "step", "axisSpecifier", "nodeTest", "predicate", "abbreviatedStep",
                "expr", "primaryExpr", "functionCall", "unionExprNoRoot", "pathExprNoRoot",
                "filterExpr", "orExpr", "andExpr", "equalityExpr", "relationalExpr",
                "additiveExpr", "multiplicativeExpr", "unaryExprNoRoot", "qName", "functionName",
                "variableReference", "nameTest", "nCName"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'processing-instruction'", "'or'", "'and'", "'='", "'!='", "'div'",
                "'mod'", "'$'", null, null, null, "'/'", "'//'", "'('", "')'", "'['",
                "']'", "'-'", "'+'", "'.'", "'*'", "'..'", "'@'", "','", "'|'", "'<'",
                "'>'", "'<='", "'>='", "':'", "'::'", "'''", "'\"'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, "NodeType", "Number",
                "AxisName", "PATHSEP", "ABRPATH", "LPAR", "RPAR", "LBRAC", "RBRAC", "MINUS",
                "PLUS", "DOT", "MUL", "DOTDOT", "AT", "COMMA", "PIPE", "LESS", "MORE_",
                "LE", "GE", "COLON", "CC", "APOS", "QUOT", "Literal", "Whitespace", "NCName"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "XPath.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public XPathParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class MainContext extends ParserRuleContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public MainContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_main;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterMain(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitMain(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitMain(this);
            else return visitor.visitChildren(this);
        }
    }

    public final MainContext main() throws RecognitionException {
        MainContext _localctx = new MainContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_main);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                expr();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LocationPathContext extends ParserRuleContext {
        public RelativeLocationPathContext relativeLocationPath() {
            return getRuleContext(RelativeLocationPathContext.class, 0);
        }

        public AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() {
            return getRuleContext(AbsoluteLocationPathNorootContext.class, 0);
        }

        public LocationPathContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_locationPath;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterLocationPath(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitLocationPath(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitLocationPath(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LocationPathContext locationPath() throws RecognitionException {
        LocationPathContext _localctx = new LocationPathContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_locationPath);
        try {
            setState(58);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case NodeType:
                case AxisName:
                case DOT:
                case MUL:
                case DOTDOT:
                case AT:
                case NCName:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(56);
                    relativeLocationPath();
                }
                break;
                case PATHSEP:
                case ABRPATH:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(57);
                    absoluteLocationPathNoroot();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AbsoluteLocationPathNorootContext extends ParserRuleContext {
        public TerminalNode PATHSEP() {
            return getToken(XPathParser.PATHSEP, 0);
        }

        public RelativeLocationPathContext relativeLocationPath() {
            return getRuleContext(RelativeLocationPathContext.class, 0);
        }

        public TerminalNode ABRPATH() {
            return getToken(XPathParser.ABRPATH, 0);
        }

        public AbsoluteLocationPathNorootContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_absoluteLocationPathNoroot;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterAbsoluteLocationPathNoroot(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitAbsoluteLocationPathNoroot(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor)
                return ((XPathVisitor<? extends T>) visitor).visitAbsoluteLocationPathNoroot(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() throws RecognitionException {
        AbsoluteLocationPathNorootContext _localctx = new AbsoluteLocationPathNorootContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_absoluteLocationPathNoroot);
        try {
            setState(64);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case PATHSEP:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(60);
                    match(PATHSEP);
                    setState(61);
                    relativeLocationPath();
                }
                break;
                case ABRPATH:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(62);
                    match(ABRPATH);
                    setState(63);
                    relativeLocationPath();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RelativeLocationPathContext extends ParserRuleContext {
        public List<StepContext> step() {
            return getRuleContexts(StepContext.class);
        }

        public StepContext step(int i) {
            return getRuleContext(StepContext.class, i);
        }

        public List<TerminalNode> PATHSEP() {
            return getTokens(XPathParser.PATHSEP);
        }

        public TerminalNode PATHSEP(int i) {
            return getToken(XPathParser.PATHSEP, i);
        }

        public List<TerminalNode> ABRPATH() {
            return getTokens(XPathParser.ABRPATH);
        }

        public TerminalNode ABRPATH(int i) {
            return getToken(XPathParser.ABRPATH, i);
        }

        public RelativeLocationPathContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_relativeLocationPath;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterRelativeLocationPath(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitRelativeLocationPath(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor)
                return ((XPathVisitor<? extends T>) visitor).visitRelativeLocationPath(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RelativeLocationPathContext relativeLocationPath() throws RecognitionException {
        RelativeLocationPathContext _localctx = new RelativeLocationPathContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_relativeLocationPath);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                step();
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == PATHSEP || _la == ABRPATH) {
                    {
                        {
                            setState(67);
                            _la = _input.LA(1);
                            if (!(_la == PATHSEP || _la == ABRPATH)) {
                                _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                            setState(68);
                            step();
                        }
                    }
                    setState(73);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StepContext extends ParserRuleContext {
        public AxisSpecifierContext axisSpecifier() {
            return getRuleContext(AxisSpecifierContext.class, 0);
        }

        public NodeTestContext nodeTest() {
            return getRuleContext(NodeTestContext.class, 0);
        }

        public List<PredicateContext> predicate() {
            return getRuleContexts(PredicateContext.class);
        }

        public PredicateContext predicate(int i) {
            return getRuleContext(PredicateContext.class, i);
        }

        public AbbreviatedStepContext abbreviatedStep() {
            return getRuleContext(AbbreviatedStepContext.class, 0);
        }

        public StepContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_step;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterStep(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitStep(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitStep(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StepContext step() throws RecognitionException {
        StepContext _localctx = new StepContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_step);
        int _la;
        try {
            setState(83);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case NodeType:
                case AxisName:
                case MUL:
                case AT:
                case NCName:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(74);
                    axisSpecifier();
                    setState(75);
                    nodeTest();
                    setState(79);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == LBRAC) {
                        {
                            {
                                setState(76);
                                predicate();
                            }
                        }
                        setState(81);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
                case DOT:
                case DOTDOT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(82);
                    abbreviatedStep();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AxisSpecifierContext extends ParserRuleContext {
        public TerminalNode AxisName() {
            return getToken(XPathParser.AxisName, 0);
        }

        public TerminalNode CC() {
            return getToken(XPathParser.CC, 0);
        }

        public TerminalNode AT() {
            return getToken(XPathParser.AT, 0);
        }

        public AxisSpecifierContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_axisSpecifier;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterAxisSpecifier(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitAxisSpecifier(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitAxisSpecifier(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AxisSpecifierContext axisSpecifier() throws RecognitionException {
        AxisSpecifierContext _localctx = new AxisSpecifierContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_axisSpecifier);
        int _la;
        try {
            setState(90);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(85);
                    match(AxisName);
                    setState(86);
                    match(CC);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(88);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == AT) {
                        {
                            setState(87);
                            match(AT);
                        }
                    }

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NodeTestContext extends ParserRuleContext {
        public NameTestContext nameTest() {
            return getRuleContext(NameTestContext.class, 0);
        }

        public TerminalNode NodeType() {
            return getToken(XPathParser.NodeType, 0);
        }

        public TerminalNode LPAR() {
            return getToken(XPathParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(XPathParser.RPAR, 0);
        }

        public TerminalNode Literal() {
            return getToken(XPathParser.Literal, 0);
        }

        public NodeTestContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_nodeTest;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterNodeTest(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitNodeTest(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitNodeTest(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NodeTestContext nodeTest() throws RecognitionException {
        NodeTestContext _localctx = new NodeTestContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_nodeTest);
        try {
            setState(100);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(92);
                    nameTest();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(93);
                    match(NodeType);
                    setState(94);
                    match(LPAR);
                    setState(95);
                    match(RPAR);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(96);
                    match(T__0);
                    setState(97);
                    match(LPAR);
                    setState(98);
                    match(Literal);
                    setState(99);
                    match(RPAR);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PredicateContext extends ParserRuleContext {
        public TerminalNode LBRAC() {
            return getToken(XPathParser.LBRAC, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RBRAC() {
            return getToken(XPathParser.RBRAC, 0);
        }

        public PredicateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_predicate;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterPredicate(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitPredicate(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitPredicate(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PredicateContext predicate() throws RecognitionException {
        PredicateContext _localctx = new PredicateContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_predicate);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                match(LBRAC);
                setState(103);
                expr();
                setState(104);
                match(RBRAC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AbbreviatedStepContext extends ParserRuleContext {
        public TerminalNode DOT() {
            return getToken(XPathParser.DOT, 0);
        }

        public TerminalNode DOTDOT() {
            return getToken(XPathParser.DOTDOT, 0);
        }

        public AbbreviatedStepContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_abbreviatedStep;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterAbbreviatedStep(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitAbbreviatedStep(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor)
                return ((XPathVisitor<? extends T>) visitor).visitAbbreviatedStep(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AbbreviatedStepContext abbreviatedStep() throws RecognitionException {
        AbbreviatedStepContext _localctx = new AbbreviatedStepContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_abbreviatedStep);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                _la = _input.LA(1);
                if (!(_la == DOT || _la == DOTDOT)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public OrExprContext orExpr() {
            return getRuleContext(OrExprContext.class, 0);
        }

        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(108);
                orExpr();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrimaryExprContext extends ParserRuleContext {
        public VariableReferenceContext variableReference() {
            return getRuleContext(VariableReferenceContext.class, 0);
        }

        public TerminalNode LPAR() {
            return getToken(XPathParser.LPAR, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RPAR() {
            return getToken(XPathParser.RPAR, 0);
        }

        public TerminalNode Literal() {
            return getToken(XPathParser.Literal, 0);
        }

        public TerminalNode Number() {
            return getToken(XPathParser.Number, 0);
        }

        public FunctionCallContext functionCall() {
            return getRuleContext(FunctionCallContext.class, 0);
        }

        public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_primaryExpr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).enterPrimaryExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XPathListener) ((XPathListener) listener).exitPrimaryExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XPathVisitor) return ((XPathVisitor<? extends T>) visitor).visitPrimaryExpr(this);
            else return visitor.visitChildren(this);
        }
    }
